kubernetes/docker-registry-with-ssl-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-registry-ingress
  namespace: ci 
  annotations:    
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "2g"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: docker-registry-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - Private Docker Registry"
spec:
  tls:
  - hosts:
    - registry.ci.yourdomain.com
    secretName: registry-ci-yourdomain-com-certificate
  rules:
    - host: registry.ci.yourdomain.com
      http:
        paths:
        - backend:
            serviceName: docker-registry-service
            servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-service
  namespace: ci
spec:
  selector:
    app: docker-registry
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry-deployment
  namespace: ci
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      volumes:
      - name: docker-registry-persistent-storage
        persistentVolumeClaim:
          claimName: docker-registry-pvc
      containers:
      - name: docker-registry
        image: registry:2
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: docker-registry-persistent-storage
          mountPath: /var/lib/registry
